# representation_manager

./: CMakeLists.txt  README.md  package.xml
include/representation_manager/: representation_manager.hpp  semantic_representation_manager.hpp
src/: representation_manager_node.cpp
src/representation_manager/: representation_manager.cpp  semantic_representation_manager.cpp
srv/: AddPlugin.srv
